# mt-rust

./: .cspell.json  .gitignore  .jscpd.json  .markdownlint-cli2.jsonc  .mt.json  .n-rules.json  .oxlintrc.json  .v8rignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  eslint.config.js  hk.pkl  knip.json  package.json  vitest.config.mjs
.codex/: hooks.json
.codex/hooks/: .normalize-state
.cursor/rules/: n-bun.mdc  n-feedback.mdc  n-ga.mdc  n-js-run.mdc  n-js.mdc  n-npm-module.mdc  n-security.mdc  n-text.mdc  n-worktree.mdc
.github/workflows/: lint-ga.yml  lint-text.yml  npm-publish.yml  release-mt.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-cli/src/docs/: index.md  main.md
crates/agent-core/: Cargo.toml
crates/agent-core/src/: acp.rs  lib.rs
crates/agent-core/src/docs/: acp.md  index.md  lib.md
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: approvals.rs  envelope.rs  handshake.rs  lib.rs  transfers.rs
crates/agent-protocol/src/docs/: approvals.md  envelope.md  handshake.md  index.md  lib.md  transfers.md
crates/agent-server/: Cargo.toml
crates/agent-server/src/: approvals_gate.rs  discovery.rs  graph.rs  lib.rs  relay_client.rs  runner.rs  session.rs  ws.rs
crates/agent-server/src/docs/: approvals_gate.md  discovery.md  graph.md  index.md  lib.md  relay_client.md  runner.md  session.md  ws.md
crates/agent-server/tests/: acp_runner.rs  graph_wiring.rs  handoff_ws.rs  relay_bridge.rs  ws_integration.rs
crates/agent-server/tests/common/: mod.rs
crates/agent-server/tests/common/docs/: index.md  mod.md
crates/agent-server/tests/docs/: acp_runner.md  graph_wiring.md  handoff_ws.md  index.md  relay_bridge.md  ws_integration.md
crates/mt/: Cargo.toml
crates/mt-cli/: Cargo.toml
crates/mt-cli/src/: main.rs
crates/mt-cli/src/docs/: index.md  main.md
crates/mt-core/: Cargo.toml
crates/mt-core/src/: artifacts.rs  claims.rs  config.rs  directory.rs  frontmatter.rs  ledger.rs  lib.rs  lifecycle.rs  nnn.rs  orchestrate.rs  publish.rs  runner.rs  signal.rs  spawn.rs  test_support.rs  worktree.rs
crates/mt-core/src/docs/: artifacts.md  claims.md  config.md  directory.md  frontmatter.md  index.md  ledger.md  lib.md  lifecycle.md  nnn.md  orchestrate.md  publish.md  runner.md  signal.md  spawn.md  test_support.md  worktree.md
crates/mt-core/tests/fixtures/: name-vectors.json
crates/mt-napi/: CHANGELOG.md  Cargo.toml  package.json  stryker.config.mjs
crates/mt-napi/docs/: build.md  index.md  stryker.config.md  vitest.config.md
crates/mt-napi/src/: lib.rs
crates/mt-napi/src/docs/: index.md  lib.md
crates/mt-protocol-check/: Cargo.toml
crates/mt-protocol-check/src/: lib.rs
crates/mt/src/: context.rs  main.rs  output.rs
crates/mt/src/commands/: check.rs  doctor.rs  graph.rs  lifecycle.rs  mod.rs  plan.rs  run.rs  signal.rs  task.rs  worktree.rs
crates/mt/tests/: cli.rs
crates/mt/tests/common/: mod.rs
docs/: нотатка-doc-files-беклог-fix-timeout.md
docs/adr/: 20260531-134056-n-cursor-flow-sovereign-orchestrator.md  20260531-141658-n-cursor-superpowers-lifecycle-composition.md  20260601-104128-n-flow-тріаж-кожного-запиту.md  20260601-213006-worktrees-gitignore-sync-крок.md  20260601-220027-coverage-gate-scoped-changed-від-base-commit.md  20260602-063622-flow-стан-sibling-файл.md  20260602-092725-mt-init-ідемпотентна-ініціалізація.md  20260602-093821-trace-відносні-лінки-flow-info.md  20260602-094451-flow-cwd-багаторівневий-резолвинг-стану.md  20260602-100744-видалення-version-changelog-з-package-structure.md  20260609-070002-scanner-gitignore-rust-target.md  20260611-192621-версіювання-документа-npm-docs-mt.md  20260611-193434-вирівнювання-scanner-state-з-специфікацією-mt.md  20260611-214219-ua-docs-benchmark-design.md  20260613-071723-заміна-js-сканера-на-rust-shim.md  20260613-071723-заміна-js-сканера-на-rust-шим.md  20260613-073949-fs-робота-в-rust-worktree-running.md  20260613-083923-fs-логіка-в-rust-worktree-running.md  20260613-084500-prebuilt-scanner-binary-delivery.md  20260613-101143-cargo-zigbuild-musl-ci.md  20260613-120000-single-publish-owner-guarantee.md  20260613-120001-integration-bot-fenced-push.md  20260613-120002-deferred-differential-cascade.md  20260613-120003-mt-invalidate-handles-stop.md  20260613-120004-absolute-dep-id-addressing.md  20260613-120005-mt-done-integrity-guards.md  20260613-120006-schema-version-backward-compat.md  20260613-120007-orchestrator-runner-roles.md  20260613-120739-mt-cleanup-команда-для-orphan-worktrees.md  20260613-120859-mt-kill-atomic-cas-delete-via-force-with-lease.md  20260613-121700-branch-protection-обовязкова-передумова-mt.md  20260613-mt-kill-only-відхилено-три-команди-kill-stop-invalidate.md  20260614-070000-task-create-rust-write-side.md  20260614-072747-model-tier-резолюція-з-a-md.md  20260615-000001-integration-bot-git-push-atomic-замість-github-merge-api.md  20260615-000002-mt-invalidate-відкладений-каскад-за-замовчуванням.md  20260615-000003-mt-invalidate-поглинає-зупинку-running-вузлів.md  20260615-000004-deps-filename-як-абсолютний-ідентифікатор-залежності.md  20260615-000005-failed-streak-лише-execution-failures.md  20260615-000006-schema-evolution-explicit-fail-closed-з-логуванням.md  (+84 more)
docs/specs/: 2026-07-23-mt-cli-rust.md
layers/: CHANGELOG.md  package.json  stryker.config.mjs  vitest.config.mjs
layers/docs/: index.md  stryker.config.md  vitest.config.md
layers/lib/: build.mjs  cli.mjs  crc.mjs  layers.mjs  llm.mjs  md.mjs  status.mjs  translate.mjs
layers/schemas/: layers.schema.json
mt/lint-fix-js-eslint-04a66bfd/: task.md
mt/m0-dogfood-smoke/: a.md  fact_009.md  note.md  run_001.md  run_002.md  run_003.md  run_004.md  run_005.md  run_006.md  run_007.md  run_008.md  run_009.md  task.md
mt/m0-kill-invalidate-scanner-sync/: task.md
mt/m0-ladder-cross-cli/: task.md
mt/m0-nnn-origin-truth/: task.md
mt/m1-acp-adapters/: task.md
mt/m1-agent-protocol/: task.md
mt/m1-agent-server/: task.md
mt/m1-attach-graph/: task.md
relay/: CHANGELOG.md  package.json  stryker.config.mjs
(+62 files in other folders)
