[workspace]
members = [
  "crates/agent-cli",
  "crates/agent-core",
  "crates/agent-protocol",
  "crates/agent-server",
  "crates/mt",
  "crates/mt-core",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "ISC"
repository = "https://github.com/nitra/mt-rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tempfile = "3"
sha2 = "0.11"
uuid = { version = "1", features = ["serde"] }
ed25519-dalek = "3"
base64 = "0.22"
async-trait = "0.1"
schemars = "1"
tokio = { version = "1", default-features = false }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.30"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
