[package]
name = "agent-cli"
description = "Тонкий клієнт agent-server: serve (хост-процес) і attach (інтерактивна сесія вузла)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
agent-server = { path = "../agent-server" }
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = ["v4"] }
