[package]
name = "agent-core"
description = "ACP-клієнт (Agent Client Protocol) — єдиний транспорт AI-викликів до зовнішніх підписочних CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "agent_core"

[dependencies]
agent-protocol = { path = "../agent-protocol" }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "sync"] }
