[package]
name = "agent-protocol"
description = "Протокол подій v4 для agent-server: Envelope/Event, хендшейк, Ed25519-підписи approvals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "agent_protocol"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
