[package]
name = "agent-server"
description = "Хост-процес M1: session host протоколу v4 — Envelope/журнал/broadcast, WS-хендшейк, discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "agent_server"

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
async-trait.workspace = true
mt-core = { path = "../mt-core" }
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
