# Транзиційний CLI-бінарник mt-scanner (JSON-pipe). Буде видалений, щойно
# @7n/mt повністю перейде на napi-аддон (crates/mt-napi).
[package]
name = "mt-cli"
description = "Transitional mt-scanner CLI binary over mt-core (JSON pipe)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mt-scanner"
path = "src/main.rs"

[dependencies]
mt-core = { path = "../mt-core" }
serde_json.workspace = true
