[package]
name = "mt-napi"
description = "napi-rs addon exposing mt-core to @7n/mt (Node.js/Bun)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mt_napi"
crate-type = ["cdylib"]

[dependencies]
mt-core = { path = "../mt-core" }
napi = { version = "3", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "3"
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
