[package]
name = "mt"
description = "mt CLI — задачний граф @7n/mt: тонкий шар над mt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mt"
path = "src/main.rs"

[dependencies]
mt-core = { path = "../mt-core" }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
